# v4l-gst

./: .dir-locals.el  .gitignore  .gitmodules  Makefile.am  README.md  SUBMODULE.md  configure.ac
.github/workflows/: tests.yml
lib/libv4l-gst/: Makefile.am  debug.h  evfd-ctrl.c  evfd-ctrl.h  gst-backend-testhooks.c  gst-backend-testhooks.h  gst-backend.c  gst-backend.h  libv4l-gst.c  utils.c  utils.h
scripts/: bootstrap-tests.sh  build.sh  collect-buffer-timeline.rb
tests/: Makefile.am  test-gst-backend.c  test-utils.c
